--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,10 @@
 \documentclass[PhD,binding=0cm,noexaminfo,oneside]{sapthesis}
-\captionsetup{format=plain,indention=0cm,singlelinecheck=false, width=.95\textwidth}
+\captionsetup{format=plain,indention=0cm,singlelinecheck=false,justification=raggedright,width=.95\textwidth}
 \usepackage{microtype} % http://www.khirevich.com/latex/microtype/
 \usepackage[utf8]{inputenx}
 \usepackage{hyperref}
 \usepackage[numbers,square]{natbib}
+\usepackage{algorithm2e}
 
 \hypersetup{
   colorlinks = true, % colours links instead of ugly boxes
