--- a/hcct.tex
+++ b/hcct.tex
@@ -216,7 +216,7 @@ A similar pruning strategy can be used to compute the $(\phi,\varepsilon)$-HCCT 
 7. ~~ \textbf{end}
 
 \vspace{-1mm}
-\hrulefill
+\hrulefill \\
 \vspace{-2mm}
 \end{minipage}
 \end{small}
