--- a/hcct.tex
+++ b/hcct.tex
@@ -199,6 +199,7 @@ A similar pruning strategy can be used to compute the $(\phi,\varepsilon)$-HCCT 
 
 \ifx\noauthorea\undefined
 \begin{figure}[ht]
+\caption{\label{alg:hcct-update} Online pruning algorithm for MCCT construction.}
 \begin{small}
 \begin{minipage}{0.9\textwidth}
 \hrulefill\\
@@ -216,11 +217,10 @@ A similar pruning strategy can be used to compute the $(\phi,\varepsilon)$-HCCT 
 7. ~~ \textbf{end}
 
 \vspace{-1mm}
-\hrulefill \\
+\hrulefill
 \vspace{-2mm}
 \end{minipage}
 \end{small}
-\caption{\label{alg:hcct-update} Online pruning algorithm for MCCT construction.}
 \end{figure}
 \fi
 
