--- a/hcct.tex
+++ b/hcct.tex
@@ -199,7 +199,7 @@ A similar pruning strategy can be used to compute the $(\phi,\varepsilon)$-HCCT 
 
 \ifx\noauthorea\undefined
 \begin{figure}[ht]
-\caption{\label{alg:hcct-update} Online pruning algorithm for MCCT construction.\hfill}
+\caption{\label{alg:hcct-update} Online pruning algorithm for MCCT construction.}
 \begin{small}
 \begin{minipage}{0.9\textwidth}
 \hrulefill\\
