--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -350,3 +350,195 @@
 	Url = {http://doi.acm.org/10.1145/337449.337483},
 	Year = {2000}
 }
+
+@article{Bernat07,
+	Acmid = {1276895},
+	Address = {Chichester, UK},
+	Author = {Bernat, Andrew R. and Miller, Barton P.},
+	Doi = {10.1002/cpe.v19:11},
+	Issn = {1532-0626},
+	Issue_Date = {August 2007},
+	Journal = {Concurrency and Computation: Practice and Experience},
+	Keywords = {dynamic instrumentation, performance analysis, profiling},
+	Month = aug,
+	Number = {11},
+	Numpages = {15},
+	Pages = {1533--1547},
+	Publisher = {John Wiley and Sons Ltd.},
+	Title = {{Incremental Call-Path Profiling}},
+	Volume = {19},
+	Year = {2007}
+}
+
+@inproceedings{Froyd05,
+	Acmid = {1088161},
+	Address = {New York, NY, USA},
+	Author = {Froyd, Nathan and Mellor-Crummey, John and Fowler, Rob},
+	Booktitle = {Proceedings of the 19th Annual International Conference on Supercomputing},
+	Doi = {10.1145/1088149.1088161},
+	Isbn = {1-59593-167-8},
+	Location = {Cambridge, Massachusetts},
+	Numpages = {10},
+	Pages = {81--90},
+	Publisher = {ACM},
+	Series = {ICS '05},
+	Title = {{Low-overhead Call Path Profiling of Unmodified, Optimized Code}},
+	Url = {http://doi.acm.org/10.1145/1088149.1088161},
+	Year = {2005}
+}
+
+@inproceedings{Hall93,
+	Acmid = {1361454},
+	Address = {Berkeley, CA, USA},
+	Articleno = {1},
+	Author = {Hall, Robert J. and Goldberg, Aaron J.},
+	Booktitle = {Proceedings of the USENIX Summer 1993 Technical Conference on Summer Technical Conference - Volume 1},
+	Isbn = {987-654-3333-22-1},
+	Location = {Cincinnati, Ohio},
+	Numpages = {19},
+	Pages = {1:1--1:19},
+	Publisher = {USENIX Association},
+	Series = {USENIX-STC '93},
+	Title = {{Call Path Profiling of Monotonic Program Resources in UNIX}},
+	Url = {http://dl.acm.org/citation.cfm?id=1361453.1361454},
+	Year = {1993}
+}
+
+
+@inproceedings{Arnold01,
+	Acmid = {378832},
+	Address = {New York, NY, USA},
+	Author = {Arnold, Matthew and Ryder, Barbara G.},
+	Booktitle = {Proceedings of the ACM SIGPLAN 2001 Conference on Programming Language Design and Implementation},
+	Doi = {10.1145/378795.378832},
+	Isbn = {1-58113-414-2},
+	Location = {Snowbird, Utah, USA},
+	Numpages = {12},
+	Pages = {168--179},
+	Publisher = {ACM},
+	Series = {PLDI '01},
+	Title = {{A Framework for Reducing the Cost of Instrumented Code}},
+	Url = {http://doi.acm.org/10.1145/378795.378832},
+	Year = {2001}
+}
+
+@inproceedings{Hirzel01,
+	Author = {Martin Hirzel and Trishul Chilimbi},
+	Booktitle = {In 4th ACM Workshop on Feedback-Directed and Dynamic Optimization},
+	Pages = {117--126},
+	Title = {{Bursty Tracing: A Framework for Low-Overhead Temporal Profiling}},
+	Year = {2001},
+	Url = {http://research.microsoft.com/en-us/um/people/trishulc/papers/bursts_fddo.pdf}
+}
+
+@inproceedings{Serrano09,
+	Acmid = {1545072},
+	Address = {Washington, DC, USA},
+	Author = {Serrano, Mauricio and Zhuang, Xiaotong},
+	Booktitle = {Proceedings of the 7th Annual IEEE/ACM International Symposium on Code Generation and Optimization},
+	Doi = {10.1109/CGO.2009.12},
+	Isbn = {978-0-7695-3576-0},
+	Keywords = {Calling Context Tree, Call Context Analysis, Program Understanding},
+	Numpages = {10},
+	Pages = {221--230},
+	Publisher = {IEEE Computer Society},
+	Series = {CGO '09},
+	Title = {{Building Approximate Calling Context from Partial Call Traces}},
+	Url = {http://dx.doi.org/10.1109/CGO.2009.12},
+	Year = {2009}
+}
+
+@inproceedings{Huang13,
+	Acmid = {2509510},
+	Address = {New York, NY, USA},
+	Author = {Huang, Jipeng and Bond, Michael D.},
+	Booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \& Applications},
+	Doi = {10.1145/2509136.2509510},
+	Isbn = {978-1-4503-2374-1},
+	Keywords = {calling context, context sensitivity, dynamic analysis, garbage collection, leak detection, race detection},
+	Location = {Indianapolis, Indiana, USA},
+	Numpages = {20},
+	Pages = {53--72},
+	Publisher = {ACM},
+	Series = {OOPSLA '13},
+	Title = {{Efficient Context Sensitivity for Dynamic Analyses via Calling Context Uptrees and Customized Memory Management}},
+	Url = {http://doi.acm.org/10.1145/2509136.2509510},
+	Year = {2013}
+}
+
+@article{Hall95,
+	Acmid = {631160},
+	Address = {Piscataway, NJ, USA},
+	Author = {Hall, Robert J.},
+	Doi = {10.1109/32.391375},
+	Issn = {0098-5589},
+	Issue_Date = {June 1995},
+	Journal = {IEEE Transactions on Software Engineering},
+	Keywords = {Performance tuning, call path, profiling.},
+	Month = jun,
+	Number = {6},
+	Numpages = {16},
+	Pages = {481--496},
+	Publisher = {IEEE Press},
+	Title = {{Call Path Refinement Profiles}},
+	Url = {http://dx.doi.org/10.1109/32.391375},
+	Volume = {21},
+	Year = {1995}
+}
+
+@article{Sumner12,
+  author = {Sumner, William N. and Zheng, Yunhui and Weeratunge, Dasarath and Zhang, Xiangyu},
+  title = {{Precise Calling Context Encoding}},
+  journal = {IEEE Transactions on Software Engineering},
+  issue_date = {September 2012},
+  volume = {38},
+  number = {5},
+  month = sep,
+  year = {2012},
+  issn = {0098-5589},
+  pages = {1160--1177},
+  numpages = {18},
+  url = {http://dx.doi.org/10.1109/TSE.2011.70},
+  doi = {10.1109/TSE.2011.70},
+  acmid = {2412998},
+  publisher = {IEEE Press},
+  address = {Piscataway, NJ, USA},
+  keywords = {Context,Encoding,Instruments,Image edge detection,Runtime,Decoding,Software algorithms,call graph,Calling context,context sensitivity,profiling,path encoding,calling context encoding}
+}
+
+@inproceedings{Bond10,
+  author = {Bond, Michael D. and Baker, Graham Z. and Guyer, Samuel Z.},
+  title = {{Breadcrumbs: Efficient Context Sensitivity for Dynamic Bug Detection Analyses}},
+  booktitle = {Proceedings of the 2010 ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  series = {PLDI '10},
+  year = {2010},
+  isbn = {978-1-4503-0019-3},
+  location = {Toronto, Ontario, Canada},
+  pages = {13--24},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/1806596.1806599},
+  doi = {10.1145/1806596.1806599}, 
+  acmid = {1806599},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {bug detection, context sensitivity, dynamic analysis}
+} 
+
+@inproceedings{Zeng14,
+  author = {Zeng, Qiang and Rhee, Junghwan and Zhang, Hui and Arora, Nipun and Jiang, Guofei and Liu, Peng},
+  title = {DeltaPath: Precise and Scalable Calling Context Encoding},
+  booktitle = {Proceedings of Annual IEEE/ACM International Symposium on Code Generation and Optimization},
+  series = {CGO '14},
+  year = {2014},
+  isbn = {978-1-4503-2670-4},
+  location = {Orlando, FL, USA},
+  pages = {109:109--109:119},
+  articleno = {109},
+  numpages = {11},
+  url = {http://doi.acm.org/10.1145/2544137.2544150},
+  doi = {10.1145/2544137.2544150},
+  acmid = {2544150},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Calling context encoding, object-oriented programming}
+}
