--- a/perf-profiling.tex
+++ b/perf-profiling.tex
@@ -5,5 +5,6 @@ In this chapter, we present two run-time analyses for collecting fine-grained pr
 
 \ifdefined\noauthorea
 \input{hcct}
+\newpage
 \input{kblpp}
 \fi
